# Adventure7

./: .appveyor.yml  .gitignore  .travis.yml  CMakeLists.txt  README.md  README.rst  adv.txt  test_compilers.sh
.github/workflows/: ci_cmake.yml
archive/: .appveyor.yml  .travis.yml
cmake/: compilers.cmake  run.cmake
doc/: Description.txt  Map.xlsx  Travel Map.xlsx
src/: CMakeLists.txt  TestSound.f90  adventure.f90  advgendat.f90  advmods.f90  asubs.f90  athand.f90  bug.f90  bug_legacy.f90  burden.f90  carry.f90  class.f90  clrlin.f90  color.f90  color_orig.f90  drop.f90  fileopen.f90  getlin.f90  getobj.f90  getwds.f90  insert.f90  ljust.f90  lookin.f90  meson.build  move.f90  not_toting_spk.f90  poof.f90  pspeak.f90  rating.f90  remove.f90  replace.f90  setscreen.f90  sound.f90  sound_legacy.f90  speak.f90  toting.f90  travl.f90  treasure.f90  upper_case.f90  val.f90  (+3 more)
tests/: testsound.txt
